--- a/src/WebSite/ClnqWebSite/src/app/views/rdv/rdv.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/views/rdv/rdv.component.html
@@ -11,25 +11,9 @@
 
 
         <div class="colored box" style="cursor: pointer; flex-direction: row; box-sizing: border-box; display: flex;">
-            <!-- search -->
-            <div fxflex="60" style="flex: 1 1 100%; box-sizing: border-box; max-width: 80%;">
-                <div fxFlex fxLayout="row">
-
-
-
-
-                    <div style="padding-left: 5px;padding-top: 3px;padding-bottom: 4px;">
-                        <dx-text-box fxFlex="calc(100% - 350px)" [class]="'textBoxCssClass'" valueChangeEvent="keyup"
-                            stylingMode="filled" [placeholder]="'Recherchez nom , prénom ... '" mode="search" [(value)]="searchText"
-                            [showClearButton]="true"
-                            (onValueChanged)="searchPatient()">
-                        </dx-text-box>
-
-                    </div>
-                </div>
-            </div>
+           
             <!-- buttons controle -->
-            <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 10%;">
+            <div style="box-sizing: border-box; ">
 
                 <div style="float: left;
                 font-size: 14px;
@@ -43,15 +27,14 @@
 
                 </div>
             </div>
-
-            <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 10%;">
+            <div style="box-sizing: border-box; ">
                 <div style="float: left;
                 font-size: 14px;
                 color: white;
                 padding-top: 5px;">
 
                     <dx-button stylingMode="outlined" text="Recharger" type="normal" [width]="130" [icon]="'refresh'"
-                        (click)="GetAllPateintList()"></dx-button>
+                        (click)="RdvRefresh()"></dx-button>
 
 
                 </div>
@@ -70,7 +53,7 @@
 
         <dx-scheduler
         #scheduler_ges id="scheduler_ges"
-        timeZone="Etc/UTC"
+        timeZone="Africa/Algiers"
         textExpr="title"
         allDayExpr="dayLong"
         [height]="'calc(100% - 60px)'"
@@ -88,8 +71,29 @@
         (onContentReady)="onContentReady($event)"
         (onAppointmentUpdating)="onAppointmentUpdating($event)"
         (onAppointmentFormOpening)="onAppointmentFormOpening($event)"
-        (onOptionChanged)="handlePropertyChange($event)"> 
+        (onAppointmentDeleting)="onAppointmentDeleting($event)"
+        (onOptionChanged)="handlePropertyChange($event)"
+      
+       
+        appointmentTemplate="appointmentTemplate"> 
       >
+
+      <dxi-resource
+      fieldExpr="Id"
+      [allowMultiple]="false"
+      [dataSource]="rdvData"
+      label="patient.firstName"
+    >
+</dxi-resource>
+
+  <div
+  *dxTemplate="let cellData of 'appointmentTemplate'"
+  class="employee-weekend"
+  
+>
+  <div  class="day-cell">{{cellData.appointmentData.patient?.firstName}}</div>
+  <div  class="day-cell">{{cellData.appointmentData.patient?.lastName}}</div>
+</div>
       <dxi-view
       type="week"
       [startDayHour]="07"
@@ -111,8 +115,8 @@
 
 <!-- new patinet -->
 
-<dx-popup [wrapperAttr]="{ class: 'searchAmorFiltresPopup' }" [width]="670" [height]="277" [showTitle]="true"
-    [position]="'top'" [dragEnabled]="false" title="Nouveau rdv. médical" [hideOnOutsideClick]="true"
+<dx-popup [wrapperAttr]="{ class: 'searchAmorFiltresPopup' }" [width]="670" [height]="355" [showTitle]="true"
+    [position]="'top'" [dragEnabled]="false" title="Nouveau rdv. médical" [hideOnOutsideClick]="true" (onShowing)="onPopUpRdvOpen()"
     [(visible)]="popupVisible">
 
     <div fxLayout="column" fxFill fxLayoutGap="5px" fxFill>
@@ -123,7 +127,7 @@
 
 
             <div>
-                <span class="titreCmt">Nom ,Prénom Date de naissance</span>
+                <span class="titreCmt">Nom ,Prénom Date et de naissance</span>
 
                                     <dx-autocomplete
                                     [width]="631"
@@ -148,7 +152,7 @@
 
             <div>
 
-                <span class="titreCmt">Prochain Rdv</span>
+                <span class="titreCmt">Prochain Rdv.</span>
 
                 <dx-date-box #dateRdv placeholder="Ex : JJ/MM/AAAA" [min]="pat_date_rdv">
                 </dx-date-box>
@@ -159,7 +163,8 @@
             <div style="padding-left: 5%;">
 
                 <span class="titreCmt">de</span>
-                <dx-date-box #startRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15"
+                
+                <dx-date-box #startRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15" [min]="min" [max]="max" [value]="min"
                     [inputAttr]="{ 'aria-label': 'Time' }">
                 </dx-date-box>
 
@@ -168,11 +173,46 @@
             <div style="padding-left: 5%;">
 
                 <span class="titreCmt">à</span>
-                <dx-date-box #endRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15"
+                <dx-date-box #endRdv placeholder="HH:mm" type="time" [width]="133" [interval]="15" [min]="min" [max]="max" [value]="min"
                     [inputAttr]="{ 'aria-label': 'Time' }">
                 </dx-date-box>
 
             </div>
+
+
+
+        </div>
+<!-- prix et type -->
+        <div style="display: flex;padding-bottom: 15px;">
+
+            <div>
+
+                <span class="titreCmt">Type rdv.</span>
+
+                <dx-select-box
+                placeholder="Choisez un type ..."
+                [items]="rdvType"
+                [showClearButton]="true"
+                displayExpr="type" 
+                valueExpr="code"
+                [(value)]="selectedType"
+            ></dx-select-box>
+
+
+            </div>
+
+            <div style="padding-left: 5%;">
+
+                <span class="titreCmt">Prix (DA)</span>
+                <dx-number-box [placeholder]="''" [class]="'defaultTextBoxCssClass'" name="rdvPrix" 
+                [(value)]="rdvPrix" [stylingMode]="'outlined'" [showClearButton]="true"
+                [width]="295">
+            </dx-number-box>
+
+
+            </div>
+
+           
 
 
 
